# rust-semantic-search

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
models/: tokenizer.json
src/: main.rs  ml.rs
